# proteindance

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  CONVERSATION_INTEGRATION.md  DDAGI.py  Dockerfile.backend.prod  Dockerfile.frontend.prod  README.md  Untitled.ipynb  app.py  debug_docking_result.json  disease_to_drug.py  docker-compose.prod.yml  docker_run.sh  docker_start.sh  docker_start_fixed.sh  dockerfile  dockerfile.comprehensive  dockerfile.final  dockerfile.fixed  dockerfile.minimal  dockerfile.simple  docking.html  main.py  nginx.conf  package-lock.json  package.json  proteindance.db  pyproject.toml  requirements-auth.txt  requirements.txt  requirements.txt.backup  services.py  services_func.py  setup_conda_env.sh  start.sh  tailwind.config.js  test_auth.sh  (+2 more)
.VSCodeCounter/2025-07-14_17-50-44/: diff-details.md  diff.md  diff.txt  results.md
.history/: services_func_20250503081956.py  services_func_20250504225719.py
.history/backend/: app_20250504225540.py  app_20250504230052.py  app_20250504230442.py
autoui/: .env.development  .env.local.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
autoui/src/: App.tsx  main.tsx
backend/: app.py
backend/aimodels/: config.json  generation_config.json  tokenizer_config.json  vocab.json
backend/core/: config.py  constants.py  logging_config.py
backend/database/: db_manager.py  session_manager.py
backend/middleware/: auth_middleware.py  error_handler.py
backend/models/: exceptions.py  protein.py  session.py  user.py  workflow.py
backend/services/: ai_engine.py  ai_service.py  auth_service.py  conversation_service.py  docking_engine.py  drug_discovery_api.py  email_service.py  pharma_engine.py  visualization_engine.py  workflow_engine.py
backend/tools/: .env  Pharma.py
backend/utils/: display.py  helpers.py  validators.py
conda_311/conda-meta/: ca-certificates-2025.6.15-hbd8a1cb_0.json  history  libexpat-2.7.0-h286801f_0.json  libffi-3.4.6-h1da3d7d_1.json  liblzma-5.8.1-h39f12f2_2.json  libsqlite-3.50.2-h6fb428d_0.json  libzlib-1.3.1-h8359307_2.json  ncurses-6.5-h5e97a16_3.json  openssl-3.5.1-h81ee809_0.json  pip-25.1.1-pyh8b19718_0.json  (+5 more)
deployment/: Dockerfile.frontend.prod
docking_test/: CLAUDE.md  docking_analysis.py  docking_visualization.py  docking_web_api.py  docking_web_interface.html  environment.yml  molecular_docking.py  requirements.txt  run_docking_pipeline.py  start_web_interface.sh  test_complete_pipeline.py
guides/: Errors.docx  ProteinDance 完整前后端协作逻辑架构.docx  STARTUP_GUIDE.md  flowchart.mmd  ~$Errors.docx
prompts/: prompt.docx  prompt2.docx
static/: output.css  style.css
templates/: candidates.html  index.html  pockets.html  proteins.html  result.html
test/: AUTHENTICATION_GUIDE.md  SETUP_AUTH.md  alphafold_indicator_demo.html  calculateCenter.py  marvin.py  predicted_structure.cif  receptor.pdbqt  requirements.txt.backup  test.py  test_auth.py  test_pdb_priority.py  test_structure_priority.py  view_pdb.py
(+990 files in other folders)
