[project]
name = "proteindance"
version = "0.1.0"
description = "A drug discovery platform that combines AI-powered analysis with protein structure prediction and molecular docking"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
readme = "CLAUDE.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.17",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "bio==1.6.2",
    "biopython==1.85",
    "biothings-client==0.4.1",
    "cattrs==24.1.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "chembl-webresource-client==0.10.9",
    "click==8.1.8",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "distro==1.9.0",
    "python-dotenv==1.1.0",
    "easydict==1.13",
    "edfio==0.4.6",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fastapi==0.115.12",
    "fonttools==4.56.0",
    "frozenlist==1.6.0",
    "gprofiler-official==1.0.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "ipython",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "mne==1.8.0",
    "multidict==6.4.3",
    "mygene==3.2.2",
    "numpy>=1.17.0",
    "openai==1.77.0",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py3dmol==2.4.2",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pyedflib==0.1.40",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "rdkit==2024.9.6",
    "requests==2.32.3",
    "requests-cache==1.2.1",
    "scipy",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-inspection==0.4.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "url-normalize==2.2.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "wcwidth==0.2.13",
    "yarl==1.20.0",
    "torch>=2.0.0",
    "transformers>=4.53.0",
    "safetensors>=0.5.0",
    "PyJWT>=2.0.0",
    "email-validator>=2.0.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = []